kubernetes/archive/deploy/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: prowlarr
spec:
  rules:
  - host: prowlarr.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
